--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -20,7 +20,7 @@
                 </ul>
             </li>
             <li class="language-dropdown">
-                <a id="choses-lang" href="@Url.Action("Detail","Teams")"><i class="fa fa-users"></i>  TAKIMIM</a>
+                <a id="choses-lang" href="@Url.Action("Detail","Team")"><i class="fa fa-users"></i>  TAKIMIM</a>
                 <ul id="language-dropdown">
                 </ul>
             </li>
