--- a/BisLeagues.Presentation/Views/Teams/Application.cshtml
+++ b/BisLeagues.Presentation/Views/Teams/Application.cshtml
@@ -86,7 +86,7 @@
         <div class="row">
             <!-- Form -->
             <div class="hidden-sm col-md-2"></div>
-            <form action="@Url.Action("Application", "Teams")" method="post" class="contact-form col-sm-12 col-md-8" enctype="multipart/form-data">
+            <form action="@Url.Action("Application", "Team")" method="post" class="contact-form col-sm-12 col-md-8" enctype="multipart/form-data">
                 <div class="form-group">
                     <input type="text" class="form-control" name="teamName" required="required" placeholder="Takım Adı">
                     <i class="fa fa-user"></i>
