--- a/BisLeagues.Presentation/Views/Teams/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/Teams/Detail.cshtml
@@ -269,7 +269,7 @@
                         {
                             <!-- Palyer Career -->
                             <div class="palyer-career theme-padding-bottom about-aurthor">
-                                <form action="@Url.Action("EditDescription", "Teams")" method="post">
+                                <form action="@Url.Action("EditDescription", "Team")" method="post">
                                     <input type="hidden" name="teamId" value="@Model.Team.Id" />
                                     <textarea name="description" style="height: 500px; width: 100%">
                                     @Model.Team.Description
