--- a/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -51,6 +51,12 @@
                             <p>Maçları Gör</p>
                         </a>
                     </li>
+                    <li class="nav-item " id="menuCaseIndex">
+                        <a class="nav-link" href="@Url.Action("List", "News")">
+                            <i class="material-icons">list</i>
+                            <p>Haberleri Gör</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
