--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -103,7 +103,7 @@
             <li>
                 <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
             </li>
-            <li><a href="#">İletişim</a></li>
+            <li><a href="#" class="login" data-toggle="modal" data-target="#login-modal">Giriş Yap</a></li>
         </ul>
     </nav>
     <!-- Slide Menu -->
