--- a/BisLeagues.Presentation/Areas/Admin/Views/Match/List.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Match/List.cshtml
@@ -46,7 +46,7 @@
                                     <div class="col-md-6">
                                         <div style="margin-top: 25px;">
                                             <div class="form-check form-check-radio">
-                                                <label class="form-check-label">
+                                                <label class="form-check-label" style="margin-left: 5px;">
                                                     <input class="form-check-input" type="radio" name="IsPlayed" id="IsPlayed" value="0" @(Model.Filters.IsPlayed == 0 ? "checked" : "")>
                                                     Hepsini Getir
                                                     <span class="circle">
