--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -1,4 +1,5 @@
-﻿<!-- Footer -->
+﻿@inject BisLeagues.Core.Utility.IUserManager UserManager
+<!-- Footer -->
 <footer class="main-footer style-2">
 
     <!-- Footer Columns -->
@@ -32,11 +33,11 @@
                 <!-- Footer Column -->
                 <!-- Footer Column -->
                 @*<div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
-                    <div class="column-widget h-white">
-                        <h5>Advertisment</h5>
-                        <a href="#"><img src="~/Assets/images/footer-add.jpg" alt=""></a>
-                    </div>
-                </div>*@
+                        <div class="column-widget h-white">
+                            <h5>Advertisment</h5>
+                            <a href="#"><img src="~/Assets/images/footer-add.jpg" alt=""></a>
+                        </div>
+                    </div>*@
                 <!-- Footer Column -->
                 <!-- Footer Column -->
                 @*<div class="col-sm-4 col-xs-6 r-full-width-2 r-full-width">
@@ -62,68 +63,93 @@
                             </ul>
                         </div>
                     </div>*@
-                    <!-- Footer Column -->
-                </div>
-            </div>
-            <!-- Footer columns -->
-    
-        </div>
-        <!-- Footer Columns -->
-        <!-- Copy Rights -->
-        <div class="copy-rights">
-            <div class="container">
-                <p>© Copyright by <i class="red-color">@ViewBag.CompanyName</i> All rights reserved.</p>
-                <a class="back-to-top scrollup" href="#"><i class="fa fa-angle-up"></i></a>
+                <!-- Footer Column -->
             </div>
         </div>
-        <!-- Copy Rights -->
-    
-    </footer>
-    <!-- Footer -->
-    <!-- Wrapper -->
-    <!-- Slide Menu -->
-    <nav id="menu" class="responive-nav">
-        <a class="r-nav-logo" href="home-1.html"><img src="~/Assets/images/logo-1.png" alt=""></a>
-        <ul class="respoinve-nav-list">
-            <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
-            <li>
-                <a href="@Url.Action("Detail","Team", new { isMyTeam = true })">Takımım</a>
-            </li>
-            <li class="mega-dropdown">
-                <a href="@Url.Action("Index", "News")">Haberler</a>
+        <!-- Footer columns -->
 
+    </div>
+    <!-- Footer Columns -->
+    <!-- Copy Rights -->
+    <div class="copy-rights">
+        <div class="container">
+            <p>© Copyright by <i class="red-color">@ViewBag.CompanyName</i> All rights reserved.</p>
+            <a class="back-to-top scrollup" href="#"><i class="fa fa-angle-up"></i></a>
+        </div>
+    </div>
+    <!-- Copy Rights -->
+
+</footer>
+<!-- Footer -->
+<!-- Wrapper -->
+<!-- Slide Menu -->
+<nav id="menu" class="responive-nav">
+    <a class="r-nav-logo" href="home-1.html"><img src="~/Assets/images/logo-1.png" alt=""></a>
+    <ul class="respoinve-nav-list">
+        <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
+        @if (UserManager.GetCurrentUser(this.Context)?.Player?.TeamPlayers?.Count > 0)
+        {
+            <li>
+                <a href="@Url.Action("Detail","Team")">Takımım</a>
+            </li>
+        }
+        else
+        {
+            <li>
+                <a href="@Url.Action("Application","Team")">Takım Başvuru</a>
+            </li>
+        }
+        <li class="mega-dropdown">
+            <a href="@Url.Action("Index", "News")">Haberler</a>
+
+        </li>
+        <li>
+            <a href="@Url.Action("UpComingMatches", "Match")">Maçlar</a>
+            <ul>
+                <li><a href="@Url.Action("UpComingMatches", "Match")">Gelecek Maçlar</a></li>
+                <li><a href="@Url.Action("PastMatches", "Match")">Geçmiş Maçlar</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
+        </li>
+
+        @if (!User.Identity.IsAuthenticated)
+        {
+            <li>
+                <a href="@Url.Action("Login", "Authentication")">Giriş Yap / Kayıt Ol</a>
+            </li>
+
+        }
+        else
+        {
+            <li>
+                <a id="" href="@Url.Action("Detail","Profile")"> Profilim</a>
             </li>
             <li>
-                <a href="@Url.Action("UpComingMatches", "Match")">Maçlar</a>
-                <ul>
-                    <li><a href="@Url.Action("UpComingMatches", "Match")">Gelecek Maçlar</a></li>
-                    <li><a href="@Url.Action("PastMatches", "Match")">Geçmiş Maçlar</a></li>
-                </ul>
+                <a href="@Url.Action("SignOut", "Authentication")">Çıkış Yap</a>
             </li>
-            <li>
-                <a href="@Url.Action("Index", "PointTable")">Puan Durumu</a>
-            </li>
-            <li><a href="#" class="login" data-toggle="modal" data-target="#login-modal">Giriş Yap</a></li>
-        </ul>
-    </nav>
-    <!-- Slide Menu -->
-    <!-- Java Script -->
-    <script src="~/Assets/js/vendor/jquery.js"></script>
-    <script src="~/Assets/js/vendor/bootstrap.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="~/Assets/js/gmap3.min.js"></script>
-    <script src="~/Assets/js/bigslide.js"></script>
-    <script src="~/Assets/js/slick.js"></script>
-    <script src="~/Assets/js/waterwheelCarousel.js"></script>
-    <script src="~/Assets/js/contact-form.js"></script>
-    <script src="~/Assets/js/countTo.js"></script>
-    <script src="~/Assets/js/datepicker.js"></script>
-    <script src="~/Assets/js/rating-star.js"></script>
-    <script src="~/Assets/js/range-slider.js"></script>
-    <script src="~/Assets/js/spinner.js"></script>
-    <script src="~/Assets/js/parallax.js"></script>
-    <script src="~/Assets/js/countdown.js"></script>
-    <script src="~/Assets/js/appear.js"></script>
-    <script src="~/Assets/js/prettyPhoto.js"></script>
-    <script src="~/Assets/js/wow-min.js"></script>
-    <script src="~/Assets/js/main.js"></script>
+        }
+    </ul>
+</nav>
+<!-- Slide Menu -->
+<!-- Java Script -->
+<script src="~/Assets/js/vendor/jquery.js"></script>
+<script src="~/Assets/js/vendor/bootstrap.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="~/Assets/js/gmap3.min.js"></script>
+<script src="~/Assets/js/bigslide.js"></script>
+<script src="~/Assets/js/slick.js"></script>
+<script src="~/Assets/js/waterwheelCarousel.js"></script>
+<script src="~/Assets/js/contact-form.js"></script>
+<script src="~/Assets/js/countTo.js"></script>
+<script src="~/Assets/js/datepicker.js"></script>
+<script src="~/Assets/js/rating-star.js"></script>
+<script src="~/Assets/js/range-slider.js"></script>
+<script src="~/Assets/js/spinner.js"></script>
+<script src="~/Assets/js/parallax.js"></script>
+<script src="~/Assets/js/countdown.js"></script>
+<script src="~/Assets/js/appear.js"></script>
+<script src="~/Assets/js/prettyPhoto.js"></script>
+<script src="~/Assets/js/wow-min.js"></script>
+<script src="~/Assets/js/main.js"></script>
