--- a/BisLeagues.Presentation/Views/Authentication/Login.cshtml
+++ b/BisLeagues.Presentation/Views/Authentication/Login.cshtml
@@ -3,36 +3,6 @@
     ViewData["Title"] = "Giriş Yap";
     Layout = "~/Views/Shared/_Layout_Heading.cshtml";
 }
-@section Head {
-    <style>
-        .btn-file {
-            position: relative;
-            overflow: hidden;
-            background-color: black;
-        }
-
-            .btn-file input[type=file] {
-                position: absolute;
-                top: 0;
-                right: 0;
-                min-width: 100%;
-                min-height: 100%;
-                font-size: 100px;
-                text-align: right;
-                filter: alpha(opacity=0);
-                opacity: 0;
-                outline: none;
-                background: white;
-                cursor: inherit;
-                display: block;
-            }
-
-        #img-upload {
-            width: 100%;
-            max-height: 300px;
-        }
-    </style>
-}
 @section Heading{
 
     <!-- Page Heading & Breadcrumbs  -->
@@ -47,8 +17,7 @@
     </div>
     <!-- Page Heading & Breadcrumbs  -->
     <!-- Page Heading banner -->
-    <div class="overlay-dark theme-padding parallax-window" data-appear-top-offset="600" data-parallax="scroll" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-    </div>
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">    </div>
     <!-- Page Heading banner -->
 }
 
@@ -90,11 +59,11 @@
                 <form action="@Url.Action("Login", "Authentication")" method="post" class="contact-form col-sm-12 col-md-8" enctype="multipart/form-data">
                     <div class="form-group wrapper">
                         <i class=" fa fa-envelope"></i>
-                        <input type="text" class="form-control" name="username" placeholder="Kullanıcı Adı">
+                        <input type="text" class="form-control" name="username" placeholder="Kullanıcı Adı" required>
                     </div>
                     <div class="form-group ">
                         <i class=" fa fa-lock"></i>
-                        <input type="password" class="form-control" name="password" placeholder="*******">
+                        <input type="password" class="form-control" name="password" placeholder="*******" required>
                     </div>
                     <div class="form-group">
                         <button class="btn full-width red-btn">Girelim bakalım</button>
