--- a/BisLeagues.Presentation/Views/Authentication/SignUp.cshtml
+++ b/BisLeagues.Presentation/Views/Authentication/SignUp.cshtml
@@ -17,8 +17,7 @@
     </div>
     <!-- Page Heading & Breadcrumbs  -->
     <!-- Page Heading banner -->
-    <div class="overlay-dark theme-padding parallax-window" data-appear-top-offset="600" data-parallax="scroll" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-    </div>
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">    </div>
     <!-- Page Heading banner -->
 }
 
@@ -59,27 +58,27 @@
             <div class="col-md-4 wrapper">
                 <form action="@Url.Action("SignUp", "Authentication")" method="post" class="contact-form col-sm-12 col-md-8" enctype="multipart/form-data">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="firstName" placeholder="İsim">
+                                    <input type="text" class="form-control" name="firstName" placeholder="İsim" required>
                                     <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="lastName" placeholder="Soyisim">
+                                    <input type="text" class="form-control" name="lastName" placeholder="Soyisim" required>
                                     <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Email">
+                                    <input type="email" class="form-control" name="email" placeholder="Email" required>
                                     <i class=" fa fa-envelope"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı">
+                                    <input type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı" required>
                                     <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="date" class="form-control" name="birthDate" placeholder="Doğum Tarihi">
+                                    <input type="date" class="form-control" name="birthDate" placeholder="Doğum Tarihi" required>
                                     <i class=" fa fa-calendar"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" name="password" placeholder="Şifre">
+                                    <input type="password" class="form-control" name="password" placeholder="Şifre" required>
                                     <i class=" fa fa-lock"></i>
                                 </div>
                                 <div class="form-group">
