--- a/BisLeagues.Presentation/Views/Match/PastMatches.cshtml
+++ b/BisLeagues.Presentation/Views/Match/PastMatches.cshtml
@@ -76,15 +76,15 @@
                         <ul>
                             @foreach (var item in Model.NewsOfPastMatches)
                             {
-                                <li>
-                                    <span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Home.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Home.Name"></span>
-                                    <span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Away.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Away.Name"></span>
-                                    <div class="detail">
-                                        <a href="@Url.Action("Detail", "News", new { item.Id })"><i>Maçın Haberine Git</i></a>
-                                        <strong>@item.Match.Home.Name<i class="red-color"> | @Model.LastMatchsResult.HomeScore - @Model.LastMatchsResult.AwayScore | </i> @item.Match.Away.Name</strong>
-                                        <!--<span class="location-marker"><i class="fa fa-map-marker"></i>3358 Evergreen Lane England</span>-->
-                                    </div>
-                                </li>
+                            <li>
+                                <a href="@Url.Action("Detail", "Team", new { item.Match.Home.Id })"><span class="pull-left"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Home.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Home.Name"></span></a>
+                                <a href="@Url.Action("Detail", "Team", new { item.Match.Away.Id })"><span class="pull-right"><img src="@Url.Action("Resize", "Image", new { url = item.Match.Away.Logo.Path, width = 105, height = 105 })" alt="@item.Match.Away.Name"></span></a>
+                                <div class="detail">
+                                    <a href="@Url.Action("Detail", "News", new { item.Id })"><i>Maçın Haberine Git</i></a>
+                                    <strong>@item.Match.Home.Name<i class="red-color"> | @Model.LastMatchsResult.HomeScore - @Model.LastMatchsResult.AwayScore | </i> @item.Match.Away.Name</strong>
+                                    <!--<span class="location-marker"><i class="fa fa-map-marker"></i>3358 Evergreen Lane England</span>-->
+                                </div>
+                            </li>
                             }
                         </ul>
                     </div>
