--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -38,11 +38,11 @@
                             <h2>Giriş Yap<button class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button></h2>
                             <form action="@Url.Action("Login", "Authentication")" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="username" placeholder="Kullanıcı Adı">
+                                    <input type="text" class="form-control" name="username" placeholder="Kullanıcı Adı" required>
                                     <i class=" fa fa-envelope"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" name="password" placeholder="*******">
+                                    <input type="password" class="form-control" name="password" placeholder="*******" required>
                                     <i class=" fa fa-lock"></i>
                                 </div>
                                 <div class="form-group custom-checkbox">
@@ -80,27 +80,27 @@
                             <h2>Kayıt Ol<button class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button></h2>
                             <form action="@Url.Action("SignUp", "Authentication")" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="firstName" placeholder="İsim">
+                                    <input type="text" class="form-control" name="firstName" placeholder="İsim" required>
                                     <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="lastName" placeholder="Soyisim">
+                                    <input type="text" class="form-control" name="lastName" placeholder="Soyisim" required>
                                     <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Email">
+                                    <input type="email" class="form-control" name="email" placeholder="Email" required>
                                     <i class=" fa fa-envelope"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı">
+                                    <input type="text" class="form-control" name="userName" placeholder="Kullanıcı Adı" required>
                                     <i class=" fa fa-user"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="date" class="form-control" name="birthDate" placeholder="Doğum Tarihi">
+                                    <input type="date" class="form-control" name="birthDate" placeholder="Doğum Tarihi" required>
                                     <i class=" fa fa-calendar"></i>
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" name="password" placeholder="Şifre">
+                                    <input type="password" class="form-control" name="password" placeholder="Şifre" required>
                                     <i class=" fa fa-lock"></i>
                                 </div>
                                 <div class="form-group">
