--- a/BisLeagues.Presentation/Views/Team/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Team/Index.cshtml
@@ -6,8 +6,7 @@
 }
 
 <!-- Page Heading banner -->
-<div class="overlay-dark theme-padding parallax-window" data-appear-top-offset="600" data-parallax="scroll" data-image-src="~/Assets/images/inner-banner/img-03.jpg">
-</div>
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))"></div>
 <!-- Page Heading banner -->
 <!-- Team Width Sidebar -->
 <div class="team-grid theme-padding white-bg">
