--- a/BisLeagues.Presentation/Views/Shared/_Layout_Heading.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Layout_Heading.cshtml
@@ -16,13 +16,15 @@
         <!-- Header -->
         <header class="header style-3">
 
+
+            <div id="message"></div>
+
             <partial name="_Partials/_TopBar" />
 
             <partial name="_Partials/_Nav" />
 
         </header>
         <!-- Header -->
-
         @*<partial name="_Partials/_Breadcrumb" />*@
 
         @RenderSection("Heading", required: false)
@@ -36,6 +38,7 @@
         <!-- Main Content -->
 
         <partial name="_Partials/_Footer" />
+        <partial name="_Partials/_Message" />
     </div>
     @RenderSection("Scripts", required: false)
 </body>
